# CMake_Boilerplate

./: .gitmodules  CMakeLists.txt  Readme.md
core/: CMakeLists.txt  main.cpp  main.h
doc/: CMakeLists.txt
lib/: CMakeLists.txt
lib/submodules/: CMakeLists.txt
tests/: CMakeLists.txt  MainTest.cpp
